:pencil: Fix a copy/paste-o

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,7 @@ maintainer = Dave Pearson
 maintainer_email = davep@davep.org
 license = License :: OSI Approved :: MIT License
 license_files = LICENCE
-keywords = terminal, library, file system, filesystem, dialog
+keywords = terminal, library
 classifiers =
     License :: OSI Approved :: MIT License
     Environment :: Console
